# fprime-baremetal

./: .gitignore  README.Md  README.md  fprime-baremetal.cmake  library.cmake  setup.py
Svc/TlmLinearChan/: CMakeLists.txt  TlmLinearChan.cpp  TlmLinearChan.hpp
Svc/TlmLinearChan/docs/: sdd.md
Svc/TlmLinearChan/test/ut/: Tester.hpp
fprime-baremetal/Os/: CMakeLists.txt
fprime-baremetal/Os/Baremetal/: CMakeLists.txt  ConditionVariable.cpp  ConditionVariable.hpp  Cpu.cpp  Cpu.hpp  DefaultCpu.cpp  DefaultFile.cpp  DefaultMemory.cpp  DefaultMutex.cpp  DefaultTask.cpp  Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileSystem.cpp  FileSystem.hpp  Memory.cpp  Memory.hpp  MicroFs.cpp  MicroFs.hpp  Mutex.cpp  Mutex.hpp  Task.cpp  Task.hpp  error.cpp  error.hpp
fprime-baremetal/Os/Baremetal/MicroFs/: MicroFs.cpp  MicroFs.hpp  MicroFsCfg.hpp
fprime-baremetal/Os/Baremetal/MicroFs/config/: MicroFsCfg.hpp
fprime-baremetal/Os/Baremetal/MicroFs/docs/: sdd.md
fprime-baremetal/Os/Baremetal/MicroFs/test/ut/: MicroFsFileTests.cpp  MicroFsTest.cpp  MyRules.cpp  MyRules.hpp  SimFileSystem.cpp  SimFileSystem.h  Tester.cpp  Tester.hpp  extractRules.py
fprime-baremetal/Os/MemoryIdScope/: CMakeLists.txt  MemoryIdScope.cpp  MemoryIdScope.hpp
fprime-baremetal/Os/OverrideNewDelete/: CMakeLists.txt  OverrideNewDelete.cpp  OverrideNewDelete.hpp
fprime-baremetal/Os/StdAtomic/: CMakeLists.txt  atomic
fprime-baremetal/Os/StdAtomic/test/: atomic_test.hpp
fprime-baremetal/Os/StdAtomic/test/ut/: StdAtomic.cpp
fprime-baremetal/Os/TaskRunner/: CMakeLists.txt  TaskRunner.cpp  TaskRunner.hpp
fprime-baremetal/Svc/: CMakeLists.txt
fprime-baremetal/Svc/FatalHandler/: CMakeLists.txt  FatalHandler.cpp  FatalHandler.fpp  FatalHandler.hpp
fprime-baremetal/Svc/PassiveCmdDispatcher/: CMakeLists.txt  PassiveCmdDispatcher.cpp  PassiveCmdDispatcher.fpp  PassiveCmdDispatcher.hpp
fprime-baremetal/Svc/PassiveCmdDispatcher/docs/: sdd.md
fprime-baremetal/Svc/TlmLinearChan/: CMakeLists.txt  TlmLinearChan.cpp  TlmLinearChan.fpp  TlmLinearChan.hpp
fprime-baremetal/Svc/TlmLinearChan/docs/: sdd.md
fprime-baremetal/Svc/TlmLinearChan/test/ut/: TestMain.cpp  Tester.cpp  Tester.hpp  TlmLinearChanTester.cpp  TlmLinearChanTester.hpp
fprime-baremetal/config/: CMakeLists.txt  MicroFsCfg.hpp
src/baremetal/size/: __main__.py  print_cli.py
